src/libqevent.bf

public struct QWheelEvent
{
	[LinkName("QWheelEvent_new")]
	public static extern void* QWheelEvent_new(QPointF pos, QPointF globalPos, QPoint pixelDelta, QPoint angleDelta, int64 buttons, int64 modifiers, int64 phase, bool inverted);
	[LinkName("QWheelEvent_new2")]
	public static extern void* QWheelEvent_new2(QPointF pos, QPointF globalPos, QPoint pixelDelta, QPoint angleDelta, int64 buttons, int64 modifiers, int64 phase, bool inverted, int64 source);
	[LinkName("QWheelEvent_new3")]
	public static extern void* QWheelEvent_new3(QPointF pos, QPointF globalPos, QPoint pixelDelta, QPoint angleDelta, int64 buttons, int64 modifiers, int64 phase, bool inverted, int64 source, QPointingDevice device);
	[LinkName("QWheelEvent_Clone")]
	public static extern QWheelEvent QWheelEvent_Clone(void* c_this);
	[LinkName("QWheelEvent_PixelDelta")]
	public static extern QPoint QWheelEvent_PixelDelta(void* c_this);
	[LinkName("QWheelEvent_AngleDelta")]
	public static extern QPoint QWheelEvent_AngleDelta(void* c_this);
	[LinkName("QWheelEvent_Phase")]
	public static extern int64 QWheelEvent_Phase(void* c_this);
	[LinkName("QWheelEvent_Inverted")]
	public static extern bool QWheelEvent_Inverted(void* c_this);
	[LinkName("QWheelEvent_IsInverted")]
	public static extern bool QWheelEvent_IsInverted(void* c_this);
	[LinkName("QWheelEvent_HasPixelDelta")]
	public static extern bool QWheelEvent_HasPixelDelta(void* c_this);
	[LinkName("QWheelEvent_IsBeginEvent")]
	public static extern bool QWheelEvent_IsBeginEvent(void* c_this);
	[LinkName("QWheelEvent_IsUpdateEvent")]
	public static extern bool QWheelEvent_IsUpdateEvent(void* c_this);
	[LinkName("QWheelEvent_IsEndEvent")]
	public static extern bool QWheelEvent_IsEndEvent(void* c_this);
	[LinkName("QWheelEvent_Source")]
	public static extern int64 QWheelEvent_Source(void* c_this);
}
public struct QTabletEvent
{
	[LinkName("QTabletEvent_new")]
	public static extern void* QTabletEvent_new(int64 t, QPointingDevice device, QPointF pos, QPointF globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, int64 keyState, int64 button, int64 buttons);
	[LinkName("QTabletEvent_Clone")]
	public static extern QTabletEvent QTabletEvent_Clone(void* c_this);
	[LinkName("QTabletEvent_Pos")]
	public static extern QPoint QTabletEvent_Pos(void* c_this);
	[LinkName("QTabletEvent_GlobalPos")]
	public static extern QPoint QTabletEvent_GlobalPos(void* c_this);
	[LinkName("QTabletEvent_PosF")]
	public static extern QPointF QTabletEvent_PosF(void* c_this);
	[LinkName("QTabletEvent_GlobalPosF")]
	public static extern QPointF QTabletEvent_GlobalPosF(void* c_this);
	[LinkName("QTabletEvent_X")]
	public static extern int32 QTabletEvent_X(void* c_this);
	[LinkName("QTabletEvent_Y")]
	public static extern int32 QTabletEvent_Y(void* c_this);
	[LinkName("QTabletEvent_GlobalX")]
	public static extern int32 QTabletEvent_GlobalX(void* c_this);
	[LinkName("QTabletEvent_GlobalY")]
	public static extern int32 QTabletEvent_GlobalY(void* c_this);
	[LinkName("QTabletEvent_HiResGlobalX")]
	public static extern double QTabletEvent_HiResGlobalX(void* c_this);
	[LinkName("QTabletEvent_HiResGlobalY")]
	public static extern double QTabletEvent_HiResGlobalY(void* c_this);
	[LinkName("QTabletEvent_UniqueId")]
	public static extern int64 QTabletEvent_UniqueId(void* c_this);
	[LinkName("QTabletEvent_Pressure")]
	public static extern double QTabletEvent_Pressure(void* c_this);
	[LinkName("QTabletEvent_Rotation")]
	public static extern double QTabletEvent_Rotation(void* c_this);
	[LinkName("QTabletEvent_Z")]
	public static extern double QTabletEvent_Z(void* c_this);
	[LinkName("QTabletEvent_TangentialPressure")]
	public static extern double QTabletEvent_TangentialPressure(void* c_this);
	[LinkName("QTabletEvent_XTilt")]
	public static extern double QTabletEvent_XTilt(void* c_this);
	[LinkName("QTabletEvent_YTilt")]
	public static extern double QTabletEvent_YTilt(void* c_this);
}
public struct QNativeGestureEvent
{
	[LinkName("QNativeGestureEvent_new")]
	public static extern void* QNativeGestureEvent_new(int64 typeVal, QPointingDevice dev, QPointF localPos, QPointF scenePos, QPointF globalPos, double value, uint64 sequenceId, uint64 intArgument);
	[LinkName("QNativeGestureEvent_new2")]
	public static extern void* QNativeGestureEvent_new2(int64 typeVal, QPointingDevice dev, int32 fingerCount, QPointF localPos, QPointF scenePos, QPointF globalPos, double value, QPointF delta);
	[LinkName("QNativeGestureEvent_new3")]
	public static extern void* QNativeGestureEvent_new3(int64 typeVal, QPointingDevice dev, int32 fingerCount, QPointF localPos, QPointF scenePos, QPointF globalPos, double value, QPointF delta, uint64 sequenceId);
	[LinkName("QNativeGestureEvent_Clone")]
	public static extern QNativeGestureEvent QNativeGestureEvent_Clone(void* c_this);
	[LinkName("QNativeGestureEvent_GestureType")]
	public static extern int64 QNativeGestureEvent_GestureType(void* c_this);
	[LinkName("QNativeGestureEvent_FingerCount")]
	public static extern int32 QNativeGestureEvent_FingerCount(void* c_this);
	[LinkName("QNativeGestureEvent_Value")]
	public static extern double QNativeGestureEvent_Value(void* c_this);
	[LinkName("QNativeGestureEvent_Delta")]
	public static extern QPointF QNativeGestureEvent_Delta(void* c_this);
	[LinkName("QNativeGestureEvent_Pos")]
	public static extern QPoint QNativeGestureEvent_Pos(void* c_this);
	[LinkName("QNativeGestureEvent_GlobalPos")]
	public static extern QPoint QNativeGestureEvent_GlobalPos(void* c_this);
	[LinkName("QNativeGestureEvent_LocalPos")]
	public static extern QPointF QNativeGestureEvent_LocalPos(void* c_this);
	[LinkName("QNativeGestureEvent_WindowPos")]
	public static extern QPointF QNativeGestureEvent_WindowPos(void* c_this);
	[LinkName("QNativeGestureEvent_ScreenPos")]
	public static extern QPointF QNativeGestureEvent_ScreenPos(void* c_this);
}
public struct QKeyEvent
{
	[LinkName("QKeyEvent_new")]
	public static extern void* QKeyEvent_new(int64 typeVal, int32 key, int64 modifiers);
	[LinkName("QKeyEvent_new2")]
	public static extern void* QKeyEvent_new2(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers);
	[LinkName("QKeyEvent_new3")]
	public static extern void* QKeyEvent_new3(int64 typeVal, int32 key, int64 modifiers, char8[] text);
	[LinkName("QKeyEvent_new4")]
	public static extern void* QKeyEvent_new4(int64 typeVal, int32 key, int64 modifiers, char8[] text, bool autorep);
	[LinkName("QKeyEvent_new5")]
	public static extern void* QKeyEvent_new5(int64 typeVal, int32 key, int64 modifiers, char8[] text, bool autorep, uint16 count);
	[LinkName("QKeyEvent_new6")]
	public static extern void* QKeyEvent_new6(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, char8[] text);
	[LinkName("QKeyEvent_new7")]
	public static extern void* QKeyEvent_new7(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, char8[] text, bool autorep);
	[LinkName("QKeyEvent_new8")]
	public static extern void* QKeyEvent_new8(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, char8[] text, bool autorep, uint16 count);
	[LinkName("QKeyEvent_new9")]
	public static extern void* QKeyEvent_new9(int64 typeVal, int32 key, int64 modifiers, uint32 nativeScanCode, uint32 nativeVirtualKey, uint32 nativeModifiers, char8[] text, bool autorep, uint16 count, QInputDevice device);
	[LinkName("QKeyEvent_Clone")]
	public static extern QKeyEvent QKeyEvent_Clone(void* c_this);
	[LinkName("QKeyEvent_Key")]
	public static extern int32 QKeyEvent_Key(void* c_this);
	[LinkName("QKeyEvent_Matches")]
	public static extern bool QKeyEvent_Matches(void* c_this, int64 key);
	[LinkName("QKeyEvent_Modifiers")]
	public static extern int64 QKeyEvent_Modifiers(void* c_this);
	[LinkName("QKeyEvent_KeyCombination")]
	public static extern QKeyCombination QKeyEvent_KeyCombination(void* c_this);
	[LinkName("QKeyEvent_Text")]
	public static extern char8[] QKeyEvent_Text(void* c_this);
	[LinkName("QKeyEvent_IsAutoRepeat")]
	public static extern bool QKeyEvent_IsAutoRepeat(void* c_this);
	[LinkName("QKeyEvent_Count")]
	public static extern int32 QKeyEvent_Count(void* c_this);
	[LinkName("QKeyEvent_NativeScanCode")]
	public static extern uint32 QKeyEvent_NativeScanCode(void* c_this);
	[LinkName("QKeyEvent_NativeVirtualKey")]
	public static extern uint32 QKeyEvent_NativeVirtualKey(void* c_this);
	[LinkName("QKeyEvent_NativeModifiers")]
	public static extern uint32 QKeyEvent_NativeModifiers(void* c_this);
}
public struct QFocusEvent
{
	[LinkName("QFocusEvent_new")]
	public static extern void* QFocusEvent_new(int64 typeVal);
	[LinkName("QFocusEvent_new2")]
	public static extern void* QFocusEvent_new2(int64 typeVal, int64 reason);
	[LinkName("QFocusEvent_Clone")]
	public static extern QFocusEvent QFocusEvent_Clone(void* c_this);
	[LinkName("QFocusEvent_GotFocus")]
	public static extern bool QFocusEvent_GotFocus(void* c_this);
	[LinkName("QFocusEvent_LostFocus")]
	public static extern bool QFocusEvent_LostFocus(void* c_this);
	[LinkName("QFocusEvent_Reason")]
	public static extern int64 QFocusEvent_Reason(void* c_this);
}
public struct QPaintEvent
{
	[LinkName("QPaintEvent_new")]
	public static extern void* QPaintEvent_new(QRegion paintRegion);
	[LinkName("QPaintEvent_new2")]
	public static extern void* QPaintEvent_new2(QRect paintRect);
	[LinkName("QPaintEvent_Clone")]
	public static extern QPaintEvent QPaintEvent_Clone(void* c_this);
	[LinkName("QPaintEvent_Rect")]
	public static extern QRect QPaintEvent_Rect(void* c_this);
	[LinkName("QPaintEvent_Region")]
	public static extern QRegion QPaintEvent_Region(void* c_this);
}
public struct QMoveEvent
{
	[LinkName("QMoveEvent_new")]
	public static extern void* QMoveEvent_new(QPoint pos, QPoint oldPos);
	[LinkName("QMoveEvent_Clone")]
	public static extern QMoveEvent QMoveEvent_Clone(void* c_this);
	[LinkName("QMoveEvent_Pos")]
	public static extern QPoint QMoveEvent_Pos(void* c_this);
	[LinkName("QMoveEvent_OldPos")]
	public static extern QPoint QMoveEvent_OldPos(void* c_this);
}
public struct QExposeEvent
{
	[LinkName("QExposeEvent_new")]
	public static extern void* QExposeEvent_new(QRegion m_region);
	[LinkName("QExposeEvent_Clone")]
	public static extern QExposeEvent QExposeEvent_Clone(void* c_this);
	[LinkName("QExposeEvent_Region")]
	public static extern QRegion QExposeEvent_Region(void* c_this);
}
public struct QPlatformSurfaceEvent
{
	[LinkName("QPlatformSurfaceEvent_new")]
	public static extern void* QPlatformSurfaceEvent_new(int64 surfaceEventType);
	[LinkName("QPlatformSurfaceEvent_Clone")]
	public static extern QPlatformSurfaceEvent QPlatformSurfaceEvent_Clone(void* c_this);
	[LinkName("QPlatformSurfaceEvent_SurfaceEventType")]
	public static extern int64 QPlatformSurfaceEvent_SurfaceEventType(void* c_this);
}
public struct QResizeEvent
{
	[LinkName("QResizeEvent_new")]
	public static extern void* QResizeEvent_new(QSize size, QSize oldSize);
	[LinkName("QResizeEvent_Clone")]
	public static extern QResizeEvent QResizeEvent_Clone(void* c_this);
	[LinkName("QResizeEvent_Size")]
	public static extern QSize QResizeEvent_Size(void* c_this);
	[LinkName("QResizeEvent_OldSize")]
	public static extern QSize QResizeEvent_OldSize(void* c_this);
}
public struct QCloseEvent
{
	[LinkName("QCloseEvent_new")]
	public static extern void* QCloseEvent_new();
	[LinkName("QCloseEvent_Clone")]
	public static extern QCloseEvent QCloseEvent_Clone(void* c_this);
}
public struct QIconDragEvent
{
	[LinkName("QIconDragEvent_new")]
	public static extern void* QIconDragEvent_new();
	[LinkName("QIconDragEvent_Clone")]
	public static extern QIconDragEvent QIconDragEvent_Clone(void* c_this);
}
